Bug 485722 - there's no way to switch to the standard 24 hour display
Summary: there's no way to switch to the standard 24 hour display
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: timezones (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-18 09:48 UTC by test
Modified: 2025-06-01 17:07 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments
screenshot (266.55 KB, image/png)
2024-05-15 09:41 UTC, test
Details

Note You need to log in before you can comment on or make changes to this bug.
Description test 2024-04-18 09:48:07 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY
there's no way to switch to the standard 24 hour display

STEPS TO REPRODUCE
1. I haven't done anything to make the switching impossible
2. 
3. 

OBSERVED RESULT
Times are being displayed in a pretty much unreadable way instead of the normal 24 hour display.  Not all entries are to be made in the morning.

EXPECTED RESULT
Display times correctly.

SOFTWARE/OS VERSIONS

Operating System: Fedora Linux 39
KDE Plasma Version: 5.27.11
KDE Frameworks Version: 5.115.0
Qt Version: 5.15.12
Kernel Version: 6.8.5-201.fc39.x86_64 (64-bit)
Graphics Platform: X11
Processors: 16 × Intel® Xeon® CPU E5-2637 v4 @ 3.50GHz
Memory: 125.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2
Manufacturer: Dell Inc.
Product Name: Precision Rack 7910
Comment 1 Daniel Vrátil 2024-04-23 07:05:15 UTC
Please provide at least a screenshot so we can know what "unreadable" means in this context.

The format of date and time displayed in KOrganizer is controlled by your locale settings, you can configure it in System Settings -> Region & Language. If the time format in KOrganizer doesn't match what you have configured in System Settings, please provide also screenshot of the System Settings page, so we can try to figure out what's wrong.
Comment 2 Bug Janitor Service 2024-05-08 03:46:02 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 test 2024-05-15 09:41:27 UTC
Created attachment 169498 [details]
screenshot

Sorry, I didn't see that this is on needinfo earlier.

It makes things unreadable to have all the times in the list doubled.
Comment 4 Allen Winter 2025-06-01 14:23:56 UTC
btw:

you can set the environment variable LC_TIME="en_GB.UTF-8"
and that would run korganizer (or kontact) completely in 24 hour time mode.

for example from the command line try running
  LC_TIME="en_GB.UTF-8" kontact

you could edit the desktop menu entry to set that environment variable for you whenever launching Kontact from the menus.
or create a new desktop menu entry for "Kontact24" that does the same.

I do plan (eventually) to add the 24-mode to the agendaview timelabels.
Comment 5 Bug Janitor Service 2025-06-01 17:03:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/124
Comment 6 Allen Winter 2025-06-01 17:06:56 UTC
Git commit 3aedc1dbf467c63314440292362a2d41d3402625 by Allen Winter.
Committed on 01/06/2025 at 17:01.
Pushed by winterz into branch 'master'.

Agenda View - add feature to display timelabels in 24-hour clock

M  +15   -5    src/agenda/timelabels.cpp
M  +3    -0    src/agenda/timelabels.h
M  +25   -0    src/prefs.cpp
M  +3    -0    src/prefs.h

https://invent.kde.org/pim/eventviews/-/commit/3aedc1dbf467c63314440292362a2d41d3402625