Agenda View - add feature to display timelabels in 24-hour clock

BUG: 485722